[lib]
name = "phash"
crate-type= ["cdylib"]

[package]
name = "phash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.0"
clap = { version = "3.0.14", features = ["derive"] }
ansi_term = { version = "0.12.0"}
nalgebra = "0.30.1"
distance = "0.4.0"
rustdct = "0.7.0"
lazy_static = "1.4.0"
transpose = "0.2.1"
jni = "0.19.0"
num-bigint = "0.4.3"
log = "0.4.14"
env_logger = "0.9.0"